2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Support libtool 2.2, don't try to check for
	presence of Python through compiling against it, as libtool is
	required to compile against it, and libtool isn't available yet
	during configure
	Adapted from patches by Rémi Cardona and Patryk Zawadzki
	(Closes: #532591)
	Also fix the message telling us whether Vala is enabled

2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Handle video/ogg for thumbnails,
	because libgnomeui sucks (Closes: #545130)

2008-08-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (playlist_select_subtitle_action_callback),
	(playlist_copy_location_action_callback): Always call
	totem_add_subtitle with the path of the currently playing movie
	* src/totem-uri.c (totem_add_subtitle): When passed a path, still
	use the last open path to be in, but also add a shortcut to
	the currently playing movie, so you can easily access it to open
	a subtitle (Closes: #545984)

2008-08-14  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* configure.in: allow browser plugins to be installed
	somewhere else than in ${libdir}/mozilla/plugins.
	(Closes: #547688)

2008-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/youtube/youtube.py: Patch from Eric Piel
	<e.a.b.piel@tudelft.nl> to stop the throbber from eating CPU when
	pulsing (Closes: #546742)

2008-08-13  Bastien Nocera  <hadess@hadess.net>

	* README:
	* data/totem.ui: Fix "Fit window to movie" and "Zoom reset"
	keyboard shortcuts (Closes: #546281)

2008-08-12  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Based on patch by: Robin Stocker <robin at nibor org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_zoom), (bvw_get_color_balance_channel),
	  (bacon_video_widget_get_video_property),
	  (bacon_video_widget_set_video_property)::
	  Refactor common code into bvw_get_color_balance_channel function.
	  (Closes: #547003)
